hover states and README

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Val Thorens</h2>
-                <button type="button" class="card__like-button"></button>
+                <button type="button" class="card__like-button">
+                  <img src="./images/Union.svg" alt="Like" />
+                </button>
               </div>
             </li>
             <li class="card">
@@ -56,7 +58,9 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Restaurant Terrace</h2>
-                <button type="button" class="card__like-button"></button>
+                <button type="button" class="card__like-button">
+                  <img src="./images/Union.svg" alt="Like" />
+                </button>
               </div>
             </li>
             <li class="card">
@@ -67,7 +71,9 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Outdoor Cafe</h2>
-                <button type="button" class="card__like-button"></button>
+                <button type="button" class="card__like-button">
+                  <img src="./images/Union.svg" alt="Like" />
+                </button>
               </div>
             </li>
             <li class="card">
@@ -80,7 +86,9 @@
                 <h2 class="card__title">
                   A very long bridge, over the forest forest forest forest
                 </h2>
-                <button type="button" class="card__like-button"></button>
+                <button type="button" class="card__like-button">
+                  <img src="./images/Union.svg" alt="Like" />
+                </button>
               </div>
             </li>
             <li class="card">
@@ -91,7 +99,9 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Tunnel with morning light</h2>
-                <button type="button" class="card__like-button"></button>
+                <button type="button" class="card__like-button">
+                  <img src="./images/Union.svg" alt="Like" />
+                </button>
               </div>
             </li>
             <li class="card">
@@ -102,14 +112,16 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Mountain House</h2>
-                <button type="button" class="card__like-button"></button>
+                <button type="button" class="card__like-button">
+                  <img src="./images/Union.svg" alt="Like" />
+                </button>
               </div>
             </li>
           </ul>
         </section>
       </main>
       <footer class="footer">
-        <div class="footer__text">2023 &copy; Spots</div>
+        <p class="footer__text">2023 &copy; Spots</p>
       </footer>
     </div>
   </body>
