--- a/index.html
+++ b/index.html
@@ -38,11 +38,7 @@
         <section class="cards page__section">
           <ul class="cards__list">
             <li class="card">
-              <img
-                src="./images/1-photo-by-moritz-feldmann-from-pexels.jpg"
-                alt="Val Thorens"
-                class="card__image"
-              />
+              <img src="./images/1.jpg" alt="Val Thorens" class="card__image" />
               <div class="card__content">
                 <h2 class="card__title">Val Thorens</h2>
                 <button type="button" class="card__like-button">
@@ -52,7 +48,7 @@
             </li>
             <li class="card">
               <img
-                src="./images/2-photo-by-ceiline-from-pexels.jpg"
+                src=".//images/2.jpg"
                 alt="Restaurant Terrace"
                 class="card__image"
               />
@@ -64,11 +60,7 @@
               </div>
             </li>
             <li class="card">
-              <img
-                src="./images/3-photo-by-tubanur-dogan-from-pexels.jpg"
-                alt="cafe"
-                class="card__image"
-              />
+              <img src="./images/3.jpg" alt="cafe" class="card__image" />
               <div class="card__content">
                 <h2 class="card__title">Outdoor Cafe</h2>
                 <button type="button" class="card__like-button">
@@ -77,11 +69,7 @@
               </div>
             </li>
             <li class="card">
-              <img
-                src="./images/4-photo-by-maurice-laschet-from-pexels.jpg"
-                alt="bridge"
-                class="card__image"
-              />
+              <img src="./images/4.jpg" alt="bridge" class="card__image" />
               <div class="card__content">
                 <h2 class="card__title">
                   A very long bridge, over the forest forest forest forest
@@ -92,11 +80,7 @@
               </div>
             </li>
             <li class="card">
-              <img
-                src="./images/5-photo-by-van-anh-nguyen-from-pexels.jpg"
-                alt="tunnel"
-                class="card__image"
-              />
+              <img src="./images/5.jpg" alt="tunnel" class="card__image" />
               <div class="card__content">
                 <h2 class="card__title">Tunnel with morning light</h2>
                 <button type="button" class="card__like-button">
@@ -106,7 +90,7 @@
             </li>
             <li class="card">
               <img
-                src="./images/6-photo-by-moritz-feldmann-from-pexels.jpg"
+                src="./images/6.jpg"
                 alt="Mountain house"
                 class="card__image"
               />
