--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
           <div class="profile__column">
             <h1 class="profile__name">Bessie Coleman</h1>
             <p class="profile__description">Civil Aviator</p>
-            <button class="profile_edit-button">
+            <button type="button" class="profile__edit-button">
               <img src="./images/pencil.svg" alt="Edit Icon" />
               Edit profile
             </button>
           </div>
-          <button class="profile__post-button">
+          <button type="button" class="profile__post-button">
             <img src="./images/plus.svg" alt="New Post" />
             New Post
           </button>
