--- a/index.html
+++ b/index.html
@@ -41,9 +41,7 @@
               <img src="./images/1.jpg" alt="Val Thorens" class="card__image" />
               <div class="card__content">
                 <h2 class="card__title">Val Thorens</h2>
-                <button type="button" class="card__like-button">
-                  <img src="./images/Union.svg" alt="Like" />
-                </button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
@@ -54,18 +52,14 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Restaurant Terrace</h2>
-                <button type="button" class="card__like-button">
-                  <img src="./images/Union.svg" alt="Like" />
-                </button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
               <img src="./images/3.jpg" alt="cafe" class="card__image" />
               <div class="card__content">
                 <h2 class="card__title">Outdoor Cafe</h2>
-                <button type="button" class="card__like-button">
-                  <img src="./images/Union.svg" alt="Like" />
-                </button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
@@ -74,18 +68,14 @@
                 <h2 class="card__title">
                   A very long bridge, over the forest forest forest forest
                 </h2>
-                <button type="button" class="card__like-button">
-                  <img src="./images/Union.svg" alt="Like" />
-                </button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
               <img src="./images/5.jpg" alt="tunnel" class="card__image" />
               <div class="card__content">
                 <h2 class="card__title">Tunnel with morning light</h2>
-                <button type="button" class="card__like-button">
-                  <img src="./images/Union.svg" alt="Like" />
-                </button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
@@ -96,9 +86,7 @@
               />
               <div class="card__content">
                 <h2 class="card__title">Mountain House</h2>
-                <button type="button" class="card__like-button">
-                  <img src="./images/Union.svg" alt="Like" />
-                </button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
           </ul>
