--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <p class="footer__text">2023 &copy; Spots</p>
       </footer>
 
-      <div class="modal">
+      <div id="edit-profile-modal" class="modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">Edit profile</h2>
@@ -124,7 +124,7 @@
         </div>
       </div>
 
-      <div class="modal">
+      <div id="new-post-modal" class="modal">
         <div class="modal__container">
           <button type="button" class="modal__close-btn"></button>
           <h2 class="modal__title">New Post</h2>
@@ -152,5 +152,6 @@
         </div>
       </div>
     </div>
+    <script src="scripts/index.js"></script>
   </body>
 </html>
