--- a/index.html
+++ b/index.html
@@ -141,6 +141,7 @@
             <label for="card-caption-input" class="modal__label">
               Caption
               <input
+                required
                 id="card-caption-input"
                 type="text"
                 class="modal__input"
